# data_science_agent_v2

./: .gitignore  README.md  get_spark.py  pyproject.toml  requirements.txt  smoke_test.py  train.py
tests/: test_train.py
